--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "migrate": "dotenv -e .env.local -- npx prisma migrate dev",
+    "migrate-reset": "dotenv -e .env.local -- npx prisma migrate reset",
     "studio": "dotenv -e .env.local -- npx prisma studio"
+  },
+  "prisma": {
+    "seed": "dotenv -e .env.local -- tsx prisma/seed.ts"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
@@ -18,24 +22,26 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mantine/core": "^7.17.2",
     "@mantine/dates": "^7.17.2",
-    "@mantine/form": "^7.17.2",
+    "@mantine/form": "^7.17.8",
     "@mantine/hooks": "^7.17.2",
     "@mantine/modals": "^7.17.2",
     "@mantine/nprogress": "^7.17.2",
     "@mantine/tiptap": "^7.17.2",
     "@prisma/client": "^6.17.0",
+    "@tabler/icons-react": "^3.35.0",
     "@tiptap/extension-link": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "better-auth": "^1.3.27",
     "dayjs": "^1.11.13",
-    "next": "15.2.2",
+    "next": "^15.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@types/node": "^20",
+    "@types/node": "^20.19.21",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
@@ -44,6 +50,8 @@
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "prisma": "^6.17.0",
-    "typescript": "^5"
+    "ts-node": "^10.9.2",
+    "tsx": "^4.20.6",
+    "typescript": "^5.9.3"
   }
 }
